microservices-definition/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smart-health-thesis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smart-health-thesis
  template:
    metadata:
      labels:
        app: smart-health-thesis
    spec:
      containers:
      - name: gateway
        image: kevteg/smart-health-thesis
        imagePullPolicy: "Always"
        ports:
          - containerPort: 3333
        command: ['sh', '-c', 'make rungateway']

      - name: medrecords 
        image: kevteg/smart-health-thesis
        imagePullPolicy: "Always"
        ports:
          - containerPort: 4444
        command: ['sh', '-c', 'make runmedrecords']

      - name: mhealth 
        image: kevteg/smart-health-thesis
        imagePullPolicy: "Always"
        ports:
          - containerPort: 5555
        command: ['sh', '-c', 'make runmhealth']

      - name: metadata 
        image: kevteg/smart-health-thesis
        imagePullPolicy: "Always"
        ports:
          - containerPort: 7777
        command: ['sh', '-c', 'make runmetadata']
