microservices-definition/gateway.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-cluster-ip
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3333
  selector:
    app: smart-health-thesis
  type: ClusterIP
