microservices-definition/medrecords.yml
apiVersion: v1
kind: Service
metadata:
  name: medrecords-cluster-ip
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 4444
  selector:
    app: smart-health-thesis
  type: ClusterIP
