microservices-definition/metadata.yml
apiVersion: v1
kind: Service
metadata:
  name: metadata-cluster-ip
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 7777
  selector:
    app: smart-health-thesis
  type: ClusterIP
