microservices-definition/mhealth.yml
apiVersion: v1
kind: Service
metadata:
  name: mhealth-cluster-ip
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5555
  selector:
    app: smart-health-thesis
  type: ClusterIP
